openshift/emerald/deploy/base/calendar-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corpcal-service
  labels:
    DataClass: Low #Does not affect directly as such
    app: corpcal-service
    app.kubernetes.io/name: corpcal
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: corporate-calendar
    app.kubernetes.io/version: ${APP_VERSION}
    app.kubernetes.io/managed-by: github-actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corpcal-service
  template:
    metadata:
      labels:
        DataClass: Low
        Internet-Egress: ALLOW
        Internet-Ingress: ALLOW
        app: corpcal-service
    spec:
      containers:
        - name: corpcal-service
          image: corpcal-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
